--- a/Mvc5Examples/packages/repositories.config
+++ b/Mvc5Examples/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Mvc5Examples\packages.config" />
+  <repository path="..\Mvc5My\packages.config" />
 </repositories>
