--- a/Mvc5Examples/Mvc5My/packages.config
+++ b/Mvc5Examples/Mvc5My/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="EntityFramework.zh-Hans" version="6.2.0" targetFramework="net45" />
   <package id="jQuery" version="3.3.1" targetFramework="net45" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core.zh-Hans" version="2.2.1" targetFramework="net45" />
@@ -27,6 +28,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.zh-Hans" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.6" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.5" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.10" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net45" />
