--- a/Mvc5Examples/Mvc5My/Mvc5My.csproj
+++ b/Mvc5Examples/Mvc5My/Mvc5My.csproj
@@ -196,6 +196,11 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="common\images\ch08\smile.gif" />
+    <Content Include="common\images\ch08\xiaotu.jpg" />
+    <Content Include="common\images\home\ipad.jpg" />
+    <Content Include="common\images\home\mainpage.jpg" />
+    <Content Include="common\images\home\mobile.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -343,9 +348,12 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Views\Shared\_MainLayout.cshtml" />
     <Content Include="Views\Shared\_LayoutPage1.cshtml" />
+    <Content Include="Views\Home\MainIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="common\css\" />
+    <Folder Include="common\js\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
