--- a/Mvc5Examples/Mvc5My/Mvc5My.csproj
+++ b/Mvc5Examples/Mvc5My/Mvc5My.csproj
@@ -121,6 +121,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Areas\Chapter01\Chapter01AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter01\Controllers\ch01NavDemosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -182,6 +184,11 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Areas\Chapter01\Views\web.config" />
+    <Content Include="Areas\Chapter01\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Chapter01\Views\ch01NavDemos\ch01Index.cshtml" />
+    <Content Include="Areas\Chapter01\Views\Shared\_ch01Layout.cshtml" />
+    <Content Include="Areas\Chapter01\Views\Shared\ch01NavDemos.cshtml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
     <Content Include="Scripts\jquery-1.12.4.min.js" />
@@ -215,9 +222,13 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_MainLayout.cshtml" />
     <Content Include="Views\Home\MainIndex.cshtml" />
+    <Content Include="Views\Shared\_AreasPartialRef.cshtml" />
+    <Content Include="Views\Shared\_AreasPartialAjax.cshtml" />
+    <Content Include="Views\Shared\_AreasLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Chapter01\Models\" />
     <Folder Include="common\css\" />
     <Folder Include="common\js\" />
     <Folder Include="Models\" />
