--- a/Mvc5Examples/Mvc5My/Mvc5My.csproj
+++ b/Mvc5Examples/Mvc5My/Mvc5My.csproj
@@ -189,6 +189,8 @@
     <Content Include="Areas\Chapter01\Views\ch01NavDemos\ch01Index.cshtml" />
     <Content Include="Areas\Chapter01\Views\Shared\_ch01Layout.cshtml" />
     <Content Include="Areas\Chapter01\Views\Shared\ch01NavDemos.cshtml" />
+    <Content Include="Areas\Chapter01\Views\ch01NavDemos\ServerInfo.cshtml" />
+    <Content Include="Areas\Chapter01\Views\ch01NavDemos\LayoutDemo.cshtml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
     <Content Include="Scripts\jquery-1.12.4.min.js" />
