--- a/Mvc5Examples/Mvc5My/Mvc5My.csproj
+++ b/Mvc5Examples/Mvc5My/Mvc5My.csproj
@@ -129,6 +129,9 @@
     <Compile Include="Areas\Chapter03\Controllers\ch03NavDemosController.cs" />
     <Compile Include="Areas\Chapter03\Models\MyColorModel.cs" />
     <Compile Include="Areas\Chapter03\Models\MyStudentModel.cs" />
+    <Compile Include="Areas\Chapter03\Models\MyUserModel.cs" />
+    <Compile Include="Areas\Chapter04\Chapter04AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter04\Controllers\ch04DemosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -137,6 +140,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Chapter03\css\ch03Styles.css" />
+    <Content Include="Areas\Chapter03\js\jquery.validate.messages_cn.js" />
+    <Content Include="Areas\Chapter04\common\ch04Scripts.js" />
     <Content Include="common\images\ch08\smile.gif" />
     <Content Include="common\images\ch08\xiaotu.jpg" />
     <Content Include="common\images\home\ipad.jpg" />
@@ -228,6 +233,24 @@
     <Content Include="Areas\Chapter03\Views\ch03Demos\RendPageDemo.cshtml" />
     <Content Include="Areas\Chapter03\Views\ch03Demos\PartialPage1.cshtml" />
     <Content Include="Areas\Chapter03\Views\ch03Demos\Example9.cshtml" />
+    <Content Include="Areas\Chapter03\Views\ch03NavDemos\ModelDemo1.cshtml" />
+    <Content Include="Areas\Chapter03\Views\ch03NavDemos\ModelDemo2.cshtml" />
+    <Content Include="Areas\Chapter03\Views\ch03NavDemos\ModelDemo3.cshtml">
+      <SubType>
+      </SubType>
+    </Content>
+    <Content Include="Areas\Chapter03\Views\ch03NavDemos\Validation1.cshtml" />
+    <Content Include="Areas\Chapter03\Views\ch03NavDemos\Validation2.cshtml" />
+    <Content Include="Areas\Chapter04\Views\web.config" />
+    <Content Include="Areas\Chapter04\Views\Shared\ch04Demos.cshtml" />
+    <Content Include="Areas\Chapter04\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Chapter04\Views\ch04Demos\ch04Index.cshtml" />
+    <Content Include="Areas\Chapter04\Views\ch04Demos\Example1.cshtml" />
+    <Content Include="Areas\Chapter04\Views\ch04Demos\Example2.cshtml" />
+    <Content Include="Areas\Chapter04\Views\ch04Demos\math.cshtml" />
+    <Content Include="Areas\Chapter04\Views\ch04Demos\string.cshtml" />
+    <Content Include="Areas\Chapter04\Views\ch04Demos\array.cshtml" />
+    <Content Include="Areas\Chapter04\Views\ch04Demos\date.cshtml" />
     <None Include="Properties\PublishProfiles\MVC5My.pubxml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
@@ -269,8 +292,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Chapter01\Models\" />
-    <Folder Include="Areas\Chapter03\Views\ch03NavDemos\" />
     <Folder Include="Areas\Chapter03\Views\ch03\" />
+    <Folder Include="Areas\Chapter04\Models\" />
     <Folder Include="common\css\" />
     <Folder Include="common\js\" />
     <Folder Include="Models\" />
