--- a/Mvc5Examples/Mvc5My/Mvc5My.csproj
+++ b/Mvc5Examples/Mvc5My/Mvc5My.csproj
@@ -123,6 +123,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Chapter01\Chapter01AreaRegistration.cs" />
     <Compile Include="Areas\Chapter01\Controllers\ch01NavDemosController.cs" />
+    <Compile Include="Areas\Chapter02\Chapter02AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter02\Controllers\ch02DemosController.cs" />
     <Compile Include="Areas\Chapter03\Chapter03AreaRegistration.cs" />
     <Compile Include="Areas\Chapter03\Controllers\ch03Controller.cs" />
     <Compile Include="Areas\Chapter03\Controllers\ch03DemosController.cs" />
@@ -132,6 +134,8 @@
     <Compile Include="Areas\Chapter03\Models\MyUserModel.cs" />
     <Compile Include="Areas\Chapter04\Chapter04AreaRegistration.cs" />
     <Compile Include="Areas\Chapter04\Controllers\ch04DemosController.cs" />
+    <Compile Include="Areas\Chapter05\Chapter05AreaRegistration.cs" />
+    <Compile Include="Areas\Chapter05\Controllers\ch05DemosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -253,6 +257,47 @@
     <Content Include="Areas\Chapter04\Views\ch04Demos\date.cshtml" />
     <Content Include="Areas\Chapter04\Views\ch04Demos\dataParse.cshtml" />
     <Content Include="Areas\Chapter04\Views\ch04Demos\ifswitch.cshtml" />
+    <Content Include="Areas\Chapter04\Views\ch04Demos\for.cshtml" />
+    <Content Include="Areas\Chapter04\Views\ch04Demos\GetWindowInfo.cshtml" />
+    <Content Include="Areas\Chapter04\Views\ch04Demos\GetScreenInfo.cshtml" />
+    <Content Include="Areas\Chapter04\Views\ch04Demos\TimeCount.cshtml" />
+    <Content Include="Areas\Chapter05\Views\web.config" />
+    <Content Include="Areas\Chapter05\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Chapter05\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Chapter05\Views\Shared\ch05Demos.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\attr.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\ch05Index.cshtml" />
+    <Content Include="Areas\Chapter02\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\AjaxDemo.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\ch02Index.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\grid1.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\grid2.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\grid3.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\grid4.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\grid5.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\icon1.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\icon2.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\prefixbg.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\prefixbtn.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\prefixtext.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\razor1.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\razor2.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\UrlHelperDemo.cshtml" />
+    <Content Include="Areas\Chapter02\Views\ch02Demos\Welcome.cshtml" />
+    <Content Include="Areas\Chapter02\Views\Shared\ch02Demos.cshtml" />
+    <Content Include="Areas\Chapter02\Views\web.config" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\hx.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\p.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\paiban.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\div.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\a1.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\a2.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\a2Part1.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\a2Part2.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\a2Part3.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\a2Part4.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\ul.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\dl.cshtml" />
     <None Include="Properties\PublishProfiles\MVC5My.pubxml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
@@ -294,8 +339,10 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Chapter01\Models\" />
+    <Folder Include="Areas\Chapter02\Models\" />
     <Folder Include="Areas\Chapter03\Views\ch03\" />
     <Folder Include="Areas\Chapter04\Models\" />
+    <Folder Include="Areas\Chapter05\Models\" />
     <Folder Include="common\css\" />
     <Folder Include="common\js\" />
     <Folder Include="Models\" />
