--- a/Mvc5Examples/Mvc5My/Mvc5My.csproj
+++ b/Mvc5Examples/Mvc5My/Mvc5My.csproj
@@ -320,6 +320,15 @@
     <Content Include="Areas\Chapter05\Views\ch05Demos\buttonDemo2.cshtml" />
     <Content Include="Areas\Chapter05\Views\ch05Demos\ButtonDemo3.cshtml" />
     <Content Include="Areas\Chapter05\Views\ch05Demos\buttonDemo4.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\other.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\form1.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\form2.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\form3.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\form4.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\form5.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\TextBoxPasswordTextArea.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\RadioButtonCheckBox.cshtml" />
+    <Content Include="Areas\Chapter05\Views\ch05Demos\ListBoxDropDownList.cshtml" />
     <None Include="Properties\PublishProfiles\MVC5My.pubxml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
