--- a/Mvc5Examples/Mvc5My/Mvc5My.csproj
+++ b/Mvc5Examples/Mvc5My/Mvc5My.csproj
@@ -380,6 +380,28 @@
     <Content Include="Areas\Chapter07\Views\Shared\ch07Demos.cshtml" />
     <Content Include="Areas\Chapter07\Views\ch07Demos\ch07Index.cshtml" />
     <Content Include="Areas\Chapter07\Views\ch07Demos\buttonsetUI.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\panel1.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\panel2.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\animation1.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\accordion1.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\accordion2UI.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\dialogAlert.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\dialogModal.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\popover.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\tooltip.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\progressBar.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\sliderUI.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\menu1UI.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\dropdown1.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\dropdown2.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\menu2UI.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\menu3UI.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\datePickerUI.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\animation2.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\animation3.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\animation4.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\animation5.cshtml" />
+    <Content Include="Areas\Chapter07\Views\ch07Demos\animation6.cshtml" />
     <None Include="Properties\PublishProfiles\MVC5My.pubxml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
@@ -388,6 +410,7 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.12.1.js" />
     <Content Include="Scripts\jquery-ui-1.12.1.min.js" />
+    <Content Include="Scripts\jquery-ui-datepicker-cn.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
