--- a/Mvc5Examples/Mvc5My/Web.config
+++ b/Mvc5Examples/Mvc5My/Web.config
@@ -52,6 +52,14 @@
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -66,11 +74,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="MyDb1" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\MyDb1.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="MyDb2" 
-         connectionString="data source=(LocalDb)\v11.0;
-                            attachdbfilename=|DataDirectory|\MyDb2.mdf;
-                            integrated security=True;
-                            MultipleActiveResultSets=True;
-                            App=EntityFramework" 
-         providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="MyDb2" connectionString="data source=(LocalDb)\v11.0;                             attachdbfilename=|DataDirectory|\MyDb2.mdf;                             integrated security=True;                             MultipleActiveResultSets=True;                             App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="MyDb3" connectionString="data source=(LocalDb)\v11.0;initial catalog=Mvc5My.ApiService.Models.MyDb3;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
